Fix header font size and spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,10 +23,10 @@ header {
 }
 
 h1 {
-    margin-bottom: 0.4em;
-    font-size: 5rem;
+    margin-bottom: 32px;
+    font-size: 6rem;
     font-family: "tangerineregular";
-    font-weight: 100;
+    font-weight: 200;
     letter-spacing: 1px;
 }
 
